[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/TempThorn.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes/Projectiles/Scripts/Thorn.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.16228

[node name="Thorn" type="Node2D"]
script = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.3, 0.3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hitbox"]
